maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:32: error: '(' expected but identifier found.
  while turnCount != 0 {
        ^PledgeMaze:45: error: illegal start of simple expression
}
^